--- a/style.css
+++ b/style.css
@@ -8,11 +8,12 @@ body {
   font-size: 18px;
   background-image: url(./public/images/v748-toon-111.jpg);
   background-repeat: no-repeat;
+  color:rgb(68, 82, 82)
 }
 
 .container {
   width: 500px;
-  margin: 150px auto;
+  margin: 198px auto;
   border-radius: 15px;
   background-color: rgb(204, 186, 221);
   overflow: hidden;
@@ -32,20 +33,56 @@ body {
 }
 
 .user-input {
-  padding: 20px 0px 50px 0px;
+  padding: 0px 0px 20px 0px;
   display: flex;
   flex-direction: row;
   justify-content: center;
   font-size: 30px;
+  gap: 15px;
 }
 
 .user-input input {
   height: 50px;
   gap: 10px;
   font-size: 25px;
+  background-color: rgb(68, 82, 82);
+  border: solid;
+  border-radius: 15px;
+  border-color: rgb(196, 207, 204);
+  padding: 10px;
+  color: rgba(0, 0, 0, 0.911)
+}
+
+.user-input input:hover {
+  opacity: 0.93;
 }
 
 .user-input button {
-  padding: 5px;
-  font-size: 20px;
+  font-size: 25px;
+  background-color: rgb(68, 82, 82);
+  border: solid;
+  border-radius: 15px;
+  border-color: rgb(196, 207, 204);
+  padding: 20px;
+  color: rgba(0, 0, 0, 0.911)
+}
+
+.user-input button:hover {
+  opacity: 0.93;
+}
+
+.worning {
+  font-size: 25px;
+  width: 100%;
+  background-color: rgb(204, 186, 221);
+  text-align: center;
+  color: rgb(221, 54, 54);
+}
+
+.alarms {
+  font-size: 25px;
+  width: 100%;
+  background-color: rgb(204, 186, 221);
+  text-align: center;
+  margin-bottom: 20px;
 }
